--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             font-family: Arial, sans-serif;
             color: white;
             text-shadow: 2px 2px 4px #000000;
-            background-image: url('sfondo.jpg'); /* nome file immagine */
+            background-image: url('IMG-20250815-WA0018.jpg'); /* nome file immagine */
             background-size: cover;
             background-position: center;
         }
