--- a/index.html
+++ b/index.html
@@ -4,43 +4,46 @@
     <meta charset="UTF-8">
     <title>Numero in tempo reale</title>
     <style>
-        /* Stile pagina */
         body {
             margin: 0;
-            padding: 0;
             height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-family: Arial, sans-serif;
-            color: white;
-            text-shadow: 2px 2px 4px #000000;
-            background-image: url('IMG-20250815-WA0018.jpg'); /* nome file immagine */
+            width: 100vw;
+            background-image: url('IMG-20250815-WA0018.jpg'); /* immagine di sfondo */
             background-size: cover;
             background-position: center;
+            position: relative;
+            font-family: Arial, sans-serif;
         }
 
-        h1 {
-            font-size: 5em;
+        /* Numero sovrapposto */
+        #numero {
+            position: absolute;
+            top: 48%;    /* posizione verticale approssimata sulla finestrella */
+            left: 72%;   /* posizione orizzontale approssimata sulla finestrella */
+            transform: translate(-50%, -50%);
+            font-size: 3em;
+            font-weight: bold;
+            color: white;
+            text-shadow: 2px 2px 8px black; /* migliore visibilità */
+            background: rgba(0,0,0,0.3);   /* leggero riquadro trasparente */
+            padding: 8px 16px;
+            border-radius: 10px;
         }
     </style>
 </head>
 <body>
-    <h1 id="numero">0</h1>
+    <div id="numero">0</div>
 
     <script>
-        // Inserisci qui i numeri noti da mostrare
+        // Inserisci qui i valori di portata o altri numeri noti
         const numeri = [12, 34, 56, 78, 90];
 
         function aggiornaNumero() {
-            const index = Math.floor(Date.now() / 10000) % numeri.length; // cambia ogni 10 secondi
+            const index = Math.floor(Date.now() / 10000) % numeri.length;
             document.getElementById('numero').textContent = numeri[index];
         }
 
-        // Primo aggiornamento
         aggiornaNumero();
-
-        // Aggiorna ogni secondo (puoi anche mettere 500ms)
         setInterval(aggiornaNumero, 1000);
     </script>
 </body>
