--- a/index.html
+++ b/index.html
@@ -2,49 +2,155 @@
 <html lang="it">
 <head>
     <meta charset="UTF-8">
-    <title>Numero in tempo reale</title>
+    <title>Impianto idroelettrico Val di Voglia</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        body {
-            margin: 0;
-            height: 100vh;
-            width: 100vw;
-            background-image: url('IMG-20250815-WA0018.jpg'); /* immagine di sfondo */
-            background-size: cover;
-            background-position: center;
-            position: relative;
-            font-family: Arial, sans-serif;
-        }
+      /* Font Avantgarde dai file ttf caricati su GitHub */
+      @font-face {
+        font-family: 'Avantgarde';
+        src: url('avgardn.ttf') format('truetype'),
+             url('avgardni.ttf') format('truetype');
+        font-weight: normal;
+        font-style: normal;
+      }
 
-        /* Numero sovrapposto sulla finestra */
-        #numero {
-            position: absolute;
-            top: 42%;    /* verticale → regola qui per centrare meglio sulla finestra */
-            left: 73%;   /* orizzontale → regola qui per centrare meglio sulla finestra */
-            transform: translate(-50%, -50%);
-            font-size: 2.5em;
-            font-weight: bold;
-            color: white;
-            text-shadow: 2px 2px 8px black;
-            background: rgba(0,0,0,0.3);   /* riquadro trasparente per leggibilità */
-            padding: 6px 12px;
-            border-radius: 8px;
-        }
+      body {
+        font-family: 'Avantgarde', Arial, sans-serif;
+        margin: 0;
+        padding-top: 220px;
+        background-image: url('PresaVoglia.jpg');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        color: white;
+        text-shadow: 1px 1px 2px black;
+      }
+
+      /* Titolo principale */
+      #titolo {
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        font-weight: bold;
+        text-decoration: underline;
+        font-size: 1.5em;
+      }
+
+      /* Informazioni statiche */
+      #info {
+        position: absolute;
+        top: 60px;
+        left: 20px;
+        text-align: left;
+        line-height: 1.6em;
+        font-size: 1em;
+      }
+
+      /* Sezione dati derivazione in basso a sinistra */
+      #dati-derivazione {
+        position: absolute;
+        bottom: 20px;
+        left: 20px;
+        font-size: 1em; /* stessa dimensione delle info statiche */
+        text-align: left; /* titolo a sinistra */
+        line-height: 1.6em;
+        background-color: rgba(0,0,0,0.4);
+        padding: 10px 15px;
+        border-radius: 10px;
+      }
+
+      #dati-derivazione h2 {
+        font-weight: bold;
+        text-decoration: underline;
+        margin-bottom: 10px;
+        font-size: 1em;
+        text-align: left; /* titolo a sinistra */
+      }
+
+      /* Dati dinamici in rosso e allineati a destra */
+      #dati-derivazione .dato {
+        color: red;
+        text-align: right;
+        display: inline-block;
+        width: 60%; /* lato destro del blocco */
+      }
+
+      /* Responsive */
+      @media (max-width: 600px) {
+        #titolo { font-size: 1.2em; }
+        #info { font-size: 0.9em; }
+        #dati-derivazione { font-size: 0.9em; padding: 8px 12px; }
+      }
+
+      @media (max-width: 400px) {
+        body { padding-top: 180px; }
+        #titolo { font-size: 1em; }
+        #info { font-size: 0.8em; }
+        #dati-derivazione { font-size: 0.8em; padding: 6px 10px; }
+      }
     </style>
 </head>
 <body>
-    <div id="numero">0</div>
+    <!-- Titolo principale -->
+    <div id="titolo">Impianto idroelettrico Val di Voglia</div>
+
+    <!-- Informazioni statiche -->
+    <div id="info">
+        Concessionario: AQA s.r.l.<br>
+        Comune: Schilpario (Bg)<br>
+        Tipologia d'uso: Idroelettrico<br>
+        Portata massima di concessione: 38 l/sec<br>
+        Portata media di concessione: 10 l/sec<br>
+        Salto nominale: 266,00 m<br>
+        Potenza di Concessione: 26,08 kW
+    </div>
+
+    <!-- Sezione dati derivazione -->
+    <div id="dati-derivazione">
+        <h2>Dati Derivazione</h2>
+        <div>Stato derivazione: <span id="STATO" class="dato">--</span></div>
+        <div>Portata DMV: <span id="DMV" class="dato">--</span></div>
+        <div>Aggiornato al <span id="timestamp" class="dato">--</span></div>
+    </div>
 
     <script>
-        // Inserisci qui i valori noti o letti da Modbus
-        const numeri = [12, 34, 56, 78, 90];
+      async function aggiornaDati() {
+        try {
+          const response = await fetch('dato.json?_=' + Date.now());
+          if (!response.ok) {
+            console.error('Errore nel fetch:', response.status, response.statusText);
+            return;
+          }
+          const data = await response.json();
 
-        function aggiornaNumero() {
-            const index = Math.floor(Date.now() / 10000) % numeri.length;
-            document.getElementById('numero').textContent = numeri[index];
+          // DMV
+          document.getElementById('DMV').innerText = data.DMV;
+
+          // STATO tradotto in testo
+          if (data.STATO == 1 || data.STATO === "1") {
+            document.getElementById('STATO').innerText = "ATTIVA";
+          } else {
+            document.getElementById('STATO').innerText = "NON ATTIVA";
+          }
+
+          // Timestamp formattato gg/mm/aaaa hh:mm
+          const d = new Date(data.timestamp);
+          const giorno = String(d.getDate()).padStart(2,'0');
+          const mese = String(d.getMonth()+1).padStart(2,'0');
+          const anno = d.getFullYear();
+          const ore = String(d.getHours()).padStart(2,'0');
+          const minuti = String(d.getMinutes()).padStart(2,'0');
+          document.getElementById('timestamp').innerText = `${giorno}/${mese}/${anno} ${ore}:${minuti}`;
+
+        } catch (err) {
+          console.error('Errore nella richiesta JSON:', err);
         }
+      }
 
-        aggiornaNumero();
-        setInterval(aggiornaNumero, 1000);
+      // Primo caricamento
+      aggiornaDati();
+      // Aggiornamento automatico ogni 30 secondi
+      setInterval(aggiornaDati, 30000);
     </script>
 </body>
 </html>
