--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
     <meta charset="UTF-8">
-    <title>Impianto idroelettrico Val di Voglia</title>
+    <title>Impianto idroelettrico Camping</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
       /* Font Avantgarde dai file ttf caricati su GitHub */
@@ -18,7 +18,7 @@
         font-family: 'Avantgarde', Arial, sans-serif;
         margin: 0;
         padding-top: 220px;
-        background-image: url('PresaVoglia.jpg');
+        background-image: url('Camping.jpeg');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -92,17 +92,17 @@
 </head>
 <body>
     <!-- Titolo principale -->
-    <div id="titolo">Impianto idroelettrico Val di Voglia</div>
+    <div id="titolo">Impianto idroelettrico Camping</div>
 
     <!-- Informazioni statiche -->
     <div id="info">
         Concessionario: AQA s.r.l.<br>
         Comune: Schilpario (Bg)<br>
         Tipologia d'uso: Idroelettrico<br>
-        Portata massima di concessione: 38 l/sec<br>
-        Portata media di concessione: 10 l/sec<br>
-        Salto nominale: 266,00 m<br>
-        Potenza di Concessione: 26,08 kW
+        Portata massima di concessione: 900 l/sec<br>
+        Portata media di concessione: 360 l/sec<br>
+        Salto nominale: 27,65 m<br>
+        Potenza di Concessione: 97,59 kW
     </div>
 
     <!-- Sezione dati derivazione -->
