--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 
     <!-- Informazioni statiche -->
     <div id="info">
-        Concessionario: AQA s.r.l.<br>
-        Comune: Schilpario (Bg)<br>
+        Concessionario: Aedes di Spatti Pietro & C. s.a.s.<br>
+        Comune: Valbondione (Bg)<br>
         Tipologia d'uso: Idroelettrico<br>
         Portata massima di concessione: 900 l/sec<br>
         Portata media di concessione: 360 l/sec<br>
