--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <div id="dati-derivazione">
         <h2>Dati Derivazione</h2>
         <div>Stato derivazione: <span id="STATO" class="dato">--</span></div>
-        <div>Portata DMV: <span id="DMV" class="dato">--</span></div>
+        <div>Portata Derivata: <span id="DMV" class="dato">--</span></div>
         <div>Aggiornato al <span id="timestamp" class="dato">--</span></div>
     </div>
 
